v030
  - First official release of the FolderOut plugin for Sigil