@@ -5,7 +5,7 @@
 <author>KevinH</author>
 <description>Copy eBook Files to Folder</description>
 <engine>python3.4</engine>
-<version>0.4.0</version>
+<version>0.5.0</version>
 <autostart>true</autostart>
 <autoclose>false</autoclose>
 <oslist>osx,win,unx</oslist>
